Front-end dialogi i confirmy

--- a/ankiety-frontend/src/app/questions/add-choice/add-choice.component.html
+++ b/ankiety-frontend/src/app/questions/add-choice/add-choice.component.html
@@ -41,8 +41,8 @@
     </div>
 
     <div class="text-center">
-      <button class="btn btn-primary" (click)="addOption()">Dodaj opcję</button>
-      <button class="btn btn-success" (click)="submitForm()" [disabled]="!questionForm.valid">
+      <button class="btn border-send text-btn" (click)="addOption()">Dodaj opcję</button>
+      <button class="btn border-add" (click)="submitForm()" [disabled]="!questionForm.valid">
         Dodaj pytanie</button>
     </div>
 
