--- a/ankiety-frontend/src/app/questions/add-text/add-text.component.html
+++ b/ankiety-frontend/src/app/questions/add-text/add-text.component.html
@@ -4,5 +4,5 @@
   <mat-hint align="end">{{textQuestion.length}} / 500</mat-hint>
 </mat-form-field>
 <div class="text-center">
-  <button class="btn btn-success" (click)="onAddQuestion()" [disabled]="textQuestion == ''">Dodaj pytanie</button>
+  <button class="btn border-add" (click)="onAddQuestion()" [disabled]="textQuestion == ''">Dodaj pytanie</button>
 </div>
