--- a/ankiety-frontend/src/app/questions/edit-choice/edit-choice.component.html
+++ b/ankiety-frontend/src/app/questions/edit-choice/edit-choice.component.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="text-center">
-        <button class="btn btn-success" (click)="onUpdateClick()"
+        <button class="btn border-add" (click)="onUpdateClick()"
           [disabled]="!optionChanged() || !questionForm.valid">Edytuj
           pytanie</button>
       </div>
