--- a/ankiety-frontend/src/app/questions/new-question/new-question.component.html
+++ b/ankiety-frontend/src/app/questions/new-question/new-question.component.html
@@ -3,7 +3,7 @@
     <mat-icon class="close-icon">close</mat-icon>
   </button>
 
-  <h1 class="text-center" style="margin-top: 10px;" mat-dialog-title>Dodaj pytanie</h1>
+  <h1 class="text-center" mat-dialog-title>Dodaj pytanie</h1>
 
   <mat-form-field>
     <mat-label>Typ pytania:</mat-label>
