--- a/ankiety-frontend/src/app/surveys/edit-survey/edit-survey/edit-survey.component.html
+++ b/ankiety-frontend/src/app/surveys/edit-survey/edit-survey/edit-survey.component.html
@@ -21,7 +21,7 @@
   </div>
 
   <div mat-dialog-actions align="center">
-    <button class="btn btn-success" type="submit"
+    <button class="btn border-add" type="submit"
       [disabled]="(data.survey.name == title && data.survey.description == description) || title == '' || description == ''"
       (click)="onEditClick()">Edytuj</button>
   </div>
