--- a/ankiety-frontend/src/app/surveys/survey/survey.component.html
+++ b/ankiety-frontend/src/app/surveys/survey/survey.component.html
@@ -1,4 +1,4 @@
-<div class="card border-info" style="max-width: 23rem; height: 8rem;" (click)="onDetailsClick()">
+<div class="card border-info" style="width: 23rem; height: 8rem;" (click)="onDetailsClick()">
   <div class="card-header">{{survey?.name}}</div>
   <div class="card-body">
     <p class="text-truncate">{{survey?.description}}</p>
