--- a/ankiety-frontend/src/app/user/change-password/change-password.component.html
+++ b/ankiety-frontend/src/app/user/change-password/change-password.component.html
@@ -2,17 +2,14 @@
     <button class="close-button" (click)="onCloseClick()">
         <mat-icon class="close-icon">close</mat-icon>
     </button>
-
-
     <h1 class="text-center" mat-dialog-title>Zmień hasło</h1>
 
     <form [formGroup]="form" autocomplete="off">
 
         <div formGroupName="Passwords">
             <div>
-                <label>Aktualne hasło:</label>
                 <mat-form-field appearance="outline">
-                    <input matInput type="password" formControlName="ActualPassword" maxlength="20" (keydown)="onKeyDown($event)">
+                    <input matInput placeholder="Aktualne hasło" type="password" formControlName="ActualPassword" maxlength="20" (keydown)="onKeyDown($event)">
                     <mat-hint align="end">{{form.controls.Passwords.controls.ActualPassword.value.length}}/20</mat-hint>
                 </mat-form-field>
                 <label class="text"
@@ -24,9 +21,8 @@
             </div>
 
             <div>
-                <label>Nowe hasło *:</label>
                 <mat-form-field appearance="outline">
-                    <input matInput type="password" formControlName="NewPassword" maxlength="20" (keydown)="onKeyDown($event)">
+                    <input matInput placeholder="Nowe hasło" type="password" formControlName="NewPassword" maxlength="20" (keydown)="onKeyDown($event)">
                     <mat-hint align="end">{{form.controls.Passwords.controls.NewPassword.value.length}}/20</mat-hint>
                 </mat-form-field>
                 <label class="text"
@@ -38,9 +34,8 @@
             </div>
 
             <div>
-                <label>Potwierdź nowe hasło:</label>
                 <mat-form-field appearance="outline">
-                    <input matInput type="password" formControlName="ConfirmPassword" maxlength="20"
+                    <input matInput placeholder="Potwierdź nowe hasło" type="password" formControlName="ConfirmPassword" maxlength="20"
                            (keydown)="onKeyDown($event)">
                     <mat-hint align="end">{{form.controls.Passwords.controls.ConfirmPassword.value.length}}/20</mat-hint>
                 </mat-form-field>
@@ -58,9 +53,9 @@
 
         <p class="text-hint">* Hasło musi mieć minimum 8 znaków, maksymalnie 20 znaków</p>
 
-        <div class="form-row">
+        <div class="text-center">
             <div class="form-group col-md-8 offset-md-2">
-                <button class="btn btn-lg btn-block btn-green" [disabled]="!form.valid" (click)="onChangePassword()">Zmień
+                <button class="btn border-add" [disabled]="!form.valid" (click)="onChangePassword()">Zmień
                     hasło</button>
             </div>
         </div>
