--- a/ankiety-frontend/src/styles.css
+++ b/ankiety-frontend/src/styles.css
@@ -39,6 +39,7 @@ mat-card:hover {
     position: absolute;
     right: 0;
     top: 0;
+    margin-left: 5px;
     /* position: absolute;
     top: 0px;
     right: 0px; */
@@ -104,4 +105,12 @@ mat-form-field{
     color: #9e9e9e !important;
     font-size: 16px;
     margin-left: 5px;
+}
+
+mat-dialog-container{
+    min-width: 30px !important;
+}
+
+.cdk-overlay-pane{
+    width: 450px !important;
 }
